<resources>
    <string name="app_name">ProgettoWebEMobile</string>

    <!-- BottomNavigationBar-->
    <string name="Buttom_navigation_bar_home">Home</string>
    <string name="Buttom_navigation_bar_search">Cerca</string>
    <string name="Buttom_navigation_bar_location">GPS</string>
    <string name="Buttom_navigation_bar_account">Profilo</string>

    <!-- Login -->

    <string name="home_singin">Se non hai un\'account clicca qui</string>

    <string name="login_email_text">E-mail</string>
    <string name="login_email_hint">Enter your e-mail...</string>

    <string name="login_password_text">Password</string>
    <string name="login_password_hint">Enter your password...</string>

    <string name="login_button_login">Login</string>
    <string name="login_button_signin">Sign in</string>

    <string name="login_error_title">Errore Login</string>
    <string name="login_error_text">Inserisci sia email che password</string>

    <string name="login_credenziali_errate_titolo">Credenziali errate</string>
    <string name="login_credenziali_errate">Le credenziali che hai inserito non sono corrette</string>

    <string name="login_db_error">Errore DB</string>
    <string name="login_db_error_title">Errore connessione al database</string>


    <!-- Registazione -->
    <string name="register_name_text">Nome</string>
    <string name="register_surname_text">Cognome</string>
    <string name="register_confirmPassword">Conferma Password</string>

    <string name="register_back">Back</string>

    <string name="register_email_exist_title">Email già esistente</string>
    <string name="register_email_exist_text">L\'email che hai inserito è già esistente</string>

    <string name="register_new_account_title">Utente Creato</string>
    <string name="register_new_account_text">L\'utente è stato creato con successo</string>

    <string name="register_exist_title">Email già esistente</string>
    <string name="register_exist_text">Se hai già un \'account utilizza le tue credenziali per accedere</string>

    <string name="register_empty_title">Attributi vuoti</string>
    <string name="register_empty_text">Inserisci tutti gli attributi</string>

    <string name="register_password_not_conform_title">Password di conferma errata</string>
    <string name="register_password_not_conform_text">La password di conferma è diversa dalla prima password</string>

    <string name="login_or">accedi o registrati</string>
    <string name="registration_back">Back</string>
    <string name="registration_text">Registrazione</string>

    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="data">01/01/2023</string>
    <string name="costo">00.00</string>
    <string name="registrationText">Registrati</string>
    <string name="esplora">Esplora</string>
    <string name="search_textBottom">Trova ciò che è adatto a te con un semplice click</string>


</resources>