<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back"
    tools:context=".login.Login">

    <LinearLayout
        android:id="@+id/login_layoutPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <TextView
            android:id="@+id/login_tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginBottom="300dp"
            android:padding="10dp"
            android:text="@string/login_password_text"
            android:textColor="@color/login_textView"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layoutUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336">

        <TextView
            android:id="@+id/login_tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:text="@string/login_email_text"
            android:textColor="@color/login_textView"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Username or e-mail"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/baseline_account_circle_24"
            android:drawablePadding="15dp"
            android:hint="@string/login_email_hint"
            android:inputType="textWebEmailAddress|text|textEmailAddress"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.573" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageLogoLogin"
        android:layout_width="358dp"
        android:layout_height="227dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/immagine_app" />

    <Button
        android:id="@+id/login_btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/login_backgroundButton"
        android:padding="15dp"
        android:text="@string/login_button_login"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_butnSignin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/login_backgroundButton"
        android:padding="15dp"
        android:text="@string/login_button_signin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="or create a new account"
        android:textColor="@color/login_textView"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/login_butnSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btnLogin"
        app:layout_constraintVertical_bias="0.536" />

</androidx.constraintlayout.widget.ConstraintLayout>


